@@ -42,12 +42,12 @@ public class ChairBlock extends Block {
     @Override
     protected InteractionResult useWithoutItem(BlockState state, Level level, BlockPos pos, Player player, BlockHitResult hitResult) {
         if (!level.isClientSide) {
-            Entity entity = null;
+            Entity entity;
             List<ChairEntity> entities = level.getEntities(PSEntityType.STOOL.get(), new AABB(pos), chairEntity -> true);
             if (entities.isEmpty()) {
                 entity = PSEntityType.STOOL.get().spawn((ServerLevel) level, pos, MobSpawnType.TRIGGERED);
             } else {
-                entity = entities.get(0);
+                entity = entities.getFirst();
             }
 
             player.startRiding(entity);
